services/fetch/database/manifests/fetchdb-example.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fetchdb
  labels:
    database: sqlite
    app: fetchdb
  namespace: hnu
spec:
  selector:
    matchLabels:
      app: fetchdb  # has to match .spec.template.metadata.labels
  serviceName: fetchdb
  replicas: 1 # single instance

  # Persistent volume is recommended for better durability guarantees between restarts.
  volumeClaimTemplates:
  - metadata:
      name: sqlite
    spec:
      accessModes: [ReadWriteOnce]
      storageClassName: standard
      resources:
        requests:
          storage: 100Mi

  template:
    metadata:
      labels:
        app: fetchdb  # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      # volumes:
      # - name: configmap
      #   configMap:
      #     name: litestream

      # Initialize using Litestream to restore data automatically
      # before starting the application.
      # initContainers:
      # - name: init-litestream
      #   image: litestream/litestream:0.3.6
      #   args: ['restore', '-if-db-not-exists', '-if-replica-exists', '-v', '/var/lib/myapp/db']
      #   volumeMounts:
      #   - name: data
      #     mountPath: /var/lib/myapp
      #   - name: configmap
      #     mountPath: /etc/litestream.yml
      #     subPath: litestream.yml
      #   env:
      #   - name: LITESTREAM_ACCESS_KEY_ID
      #     valueFrom:
      #       secretKeyRef:
      #         name: litestream
      #         key: LITESTREAM_ACCESS_KEY_ID
      #   - name: LITESTREAM_SECRET_ACCESS_KEY
      #     valueFrom:
      #       secretKeyRef:
      #         name: litestream
      #         key: LITESTREAM_SECRET_ACCESS_KEY

      # Start your application & Litestream to share a PVC data directory.
      containers:
      - name: fetchdb
        image: hnu/fetchdb:v1.0.1
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 3456
        volumeMounts:
        - name: sqlite
          mountPath: /var/lib/fetchdb

      # - name: litestream
      #   image: litestream/litestream:0.3.6
      #   args: ['replicate']
      #   volumeMounts:
      #   - name: data
      #     mountPath: /var/lib/myapp
      #   - name: configmap
      #     mountPath: /etc/litestream.yml
      #     subPath: litestream.yml
      #   env:
      #   - name: LITESTREAM_ACCESS_KEY_ID
      #     valueFrom:
      #       secretKeyRef:
      #         name: litestream
      #         key: LITESTREAM_ACCESS_KEY_ID
      #   - name: LITESTREAM_SECRET_ACCESS_KEY
      #     valueFrom:
      #       secretKeyRef:
      #         name: litestream
      #         key: LITESTREAM_SECRET_ACCESS_KEY
      #   ports:
      #   - name: metrics
      #     containerPort: 9090
